# ChunkViz

./: .gitignore  README.md  pyproject.toml
apps/streamlit/: App.py
chunkviz/: __init__.py
chunkviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chunkviz/chunkers/: fixed.py  layout.py  semantic.py
chunkviz/cli/: app.py
chunkviz/core/: interfaces.py  runio.py  types.py  utils.py
chunkviz/eval/: metrics.py
chunkviz/retrieval/: hybrid.py  lexical.py  simple_embed.py
chunkviz/viz/: overlay.py
data/configs/: demo.yaml  demo_layout.yaml  demo_semantic.yaml
data/samples/: sample1.txt
tests/: test_chunkers.py  test_cli.py
